# chain-registry

./: .dockerignore  .env  .gcloudignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  cloudbuild.yaml  docker-compose.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20230222_234021_create_chain_tables.rs  m20230518_213347_add_svm_chains.rs  m20230620_182031_add_slug_to_chains.rs  main.rs
src/: lib.rs  main.rs  pool.rs
src/entity/: evm_chain.rs  mod.rs  prelude.rs  svm_chain.rs
