[package]
name = "eclipse-chain-registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "migration" }
async-trait = { version = "0.1" }
rust-argon2 = "1.0"
anyhow = "1.0"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]


[dependencies.sea-orm-rocket]
git = "https://github.com/SeaQL/sea-orm"

[dependencies.sea-orm]
version = "^0.11.0"
features = [
  "sqlx-postgres",
  "macros",
  "postgres-array"
]