[package]
name = "eclipse-chain-registry"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
anyhow = "1.0"
async-trait = { version = "0.1" }
migration = { path = "migration" }
percent-encoding = "2.2.0"
rust-argon2 = "1.0"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
dotenv = "0.15.0"
serde = "1.0.164"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.sea-orm-rocket]
git = "https://github.com/SeaQL/sea-orm"

[dependencies.sea-orm]
version = "^0.11.0"
features = [
  "sqlx-postgres",
  "macros",
  "postgres-array"
]
